--- a/Storage-service/pom.xml
+++ b/Storage-service/pom.xml
@@ -82,6 +82,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.18.2</version>
+			<scope>test</scope>
+		</dependency>
 
     </dependencies>
 	<dependencyManagement>
